<!-- res/menu/map_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- 顶部统计项，不可点击 -->

    <item android:id="@+id/menu_unscanned"
        android:title="@string/map_menu_preview"
        android:icon="@drawable/ic_filter_unscanned"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_search"
        android:title="@string/map_menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_refresh"
        android:title="@string/map_menu_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_nav_mode"
        android:title="@string/map_menu_nav_mode"
        android:icon="@drawable/ic_nav_mode_off"
        app:showAsAction="always"/>
</menu>
