<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_begin_scan"
        android:icon="@drawable/ic_begin_scan"
        android:title="@string/scan_menu_begin_scan"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_query_unscanned"
        android:icon="@drawable/ic_search_unscanned"
        android:title="@string/scan_menu_unscanned"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_submit_offline"
        android:icon="@drawable/ic_cloud_upload"
        android:title="@string/scan_menu_submit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_generate_report"
        android:icon="@drawable/ic_done"
        android:title="@string/scan_menu_report"
        app:showAsAction="always"/>
</menu>
