<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    tools:context=".view.MeFragment">

    <Button
        android:id="@+id/btn_my_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_work_title"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btn_my_apartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_apartment_button"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btn_my_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_large_parcels"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btn_share_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_log_button"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btn_dev_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer_settings"
        android:layout_marginTop="16dp" />

</LinearLayout>
