<!-- list_item_place.xml -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/codeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_code_label" />

    <TextView
        android:id="@+id/streetOrApartmentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_street_label" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_address_label" />

</LinearLayout>
