<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginEnd="8dp">

    <TextView
        android:id="@+id/tracking_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/package_item_tracking_id_label"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/save_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/package_item_save_time_label"
        android:layout_marginStart="8dp"
    android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/driver_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/package_item_driver_id_label"
        android:layout_marginStart="8dp" />
</LinearLayout>
